# cpp-cmake-example

./: .gitignore  CMakeLists.txt  README.md
include/: computations.h
src/: computations.cpp  main.cpp
